Add Travis config

--- a/gnuplot.config
+++ b/gnuplot.config
@@ -5,4 +5,4 @@ set boxwidth 0.25
 set style fill solid 1.0 border -1
 
 set output "spectrum.png"
-plot "spectrum.csv" notitle
+plot "spectrum.csv" notitle with impulses
