--- a/fourier.config
+++ b/fourier.config
@@ -1,3 +1,3 @@
 set terminal svg
-set output "spectrum.svg"
-plot "spectrum.csv" notitle with impulses
+set output "fourier.svg"
+plot "fourier.csv" notitle with impulses
