--- a/samples.config
+++ b/samples.config
@@ -1,3 +1,3 @@
 set terminal svg
-set output "spectrum.svg"
-plot "spectrum.csv" notitle with impulses
+set output "samples.svg"
+plot "samples.csv" notitle with impulses
