Dump bin freq as first series

--- a/fourier.config
+++ b/fourier.config
@@ -1,3 +1,5 @@
 set terminal svg
 set output "fourier.svg"
-plot "fourier.csv" notitle with impulses
+set label rotate by 90
+set xtics 10
+plot "fourier.csv" using 2 notitle with impulses
