List notes, describe bin res

--- a/fourier.config
+++ b/fourier.config
@@ -1,5 +1,3 @@
 set terminal svg
 set output "fourier.svg"
-set label rotate by 90
-set xtics 10
-plot "fourier.csv" using 2 notitle with impulses
+plot "fourier.csv" notitle with impulses
