--- a/fourier.config
+++ b/fourier.config
@@ -1,3 +1,7 @@
-set terminal svg
+set terminal svg size 1024,640
 set output "fourier.svg"
+set xtics 10
+set xtics rotate
+set xlabel "Hz"
+set grid xtics ytics
 plot "fourier.csv" notitle with impulses
