--- a/fourier.config
+++ b/fourier.config
@@ -4,4 +4,5 @@ set xtics 10
 set xtics rotate
 set xlabel "Hz"
 set grid xtics ytics
+set tics font "Helvetica,8"
 plot "fourier.csv" notitle with impulses
