--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ script:
 
   # gcc build with profiler
   - make CXX=g++-6 DEBUG='-g -pg -O3' clean dft.o
-  - ./dft.o && gprof --brief ./dft.o
+  - ./dft.o && gprof dft.o
 
   # CPP check
   - make CXX=g++-6 clean all
