--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@ script:
   # clang build
   - make CXX=clang++-6.0 dft.o
 
-  # gcc build with profiler
-  - make CXX=g++-6 DEBUG='-g -pg -O3' clean dft.o
+  # gcc build with coverage and profiler (no optimisation)
+  - make CXX=g++-6 DEBUG='-g -pg --coverage' clean dft.o
   - ./dft.o && gprof dft.o
-
-  # CPP check
-  - make CXX=g++-6 clean all
-  - cppcheck --enable=all .
 
   # Upload coverage
   - bash <(curl -s https://codecov.io/bash)
+
+  # Main gcc build
+  - make CXX=g++-6 clean all
+  - cppcheck --enable=all .
 
 # Deploy to GitHub pages
 deploy:
