--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ script:
   - make CXX=g++-8 DEBUG='-g -pg --coverage' clean dft.o
   - ./dft.o && gprof dft.o
 
-  # Upload coverage
+  # Generate and upload coverage
+  - gcov-8 -j -a dft.o
   - bash <(curl -s https://codecov.io/bash)
 
   # Main gcc build
