--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - ./dft.o && gprof dft.o
 
   # Generate and upload coverage
-  - gcov-8 -j -a dft.o
+  - gcov -j -a dft.o
   - bash <(curl -s https://codecov.io/bash)
 
   # Main gcc build
@@ -36,4 +36,3 @@ matrix:
             - g++-8
             - cppcheck
             - gnuplot
-            - gcov-8
