Add apt update true

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ matrix:
     - os: linux
       addons:
         apt:
+          update: true
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-trusty-6.0
@@ -38,3 +39,4 @@ matrix:
             - g++-8
             - cppcheck
             - gnuplot
+            - gcov
